# ipdt

./: Cargo.toml  README.md  fib.wast  test.ts
src/: core.rs  error.rs  lib.rs  main.rs  wasm_utils.rs
